--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
     "url": "https://github.com/Mahdi-Suleiman/kahreta-task/issues"
   },
   "homepage": "https://github.com/Mahdi-Suleiman/kahreta-task#readme",
-  "resolutions": {
-    "fs-capacitor": "3.0.0"
-  },
   "dependencies": {
     "@prisma/client": "^2.29.1",
     "apollo-server": "^2.25.3",
-    "apollo-server-express": "^3.6.3",
+    "apollo-server-express": "^2.25.3",
+    "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
+    "form-data": "^4.0.0",
     "fs-capacitor": "^7.0.1",
+    "graphql": "^15.8.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-scalars": "^1.15.0",
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
