--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
     "@apollo/client": "^3.5.10",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cookie-cutter": "^0.2.0",
     "graphql": "^16.3.0",
+    "js-cookie": "^3.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-cookie": "^4.1.1",
+    "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
