--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-express": "^2.25.3",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "fs-capacitor": "^7.0.1",
     "graphql": "^15.8.0",
