--- a/package.json
+++ b/package.json
@@ -34,10 +34,7 @@
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "next": "^11.1.4",
-    "nodemon": "^2.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "prisma": "^2.29.1"
